--- a/ECommerce/ECommerce.WEB/Views/Home/_Slider.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/_Slider.cshtml
@@ -1,5 +1,4 @@
-﻿
-@using ECommerce.WEB.Models.SliderManagement
+﻿@using ECommerce.WEB.Models.SliderManagement
 @model List<SliderViewModel>
 <link rel="stylesheet" type="text/css" href="~/Themes/assets/css/slick-theme.css">
 <link rel="stylesheet" type="text/css" href="~/Themes/assets/css/slick.css">
