--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -71,6 +71,7 @@
                                 <a href="javascript:void(0)" aria-expanded="true"><i class="ti-pie-chart"></i><span>Ürün Yönetimi</span></a>
                                 <ul class="collapse">
                                     <li><a href="@Url.Action("Index","Product")">Ürün</a></li>
+                                    <li><a href="@Url.Action("ProductStoreWindowList","Product")">Vitrin Ürünleri</a></li>
                                     <li><a href="login.html">Ürün Özelliği</a></li>
                                     <li><a href="login.html">Ürün Sipariş Seçenekleri</a></li>
                                 </ul>
