--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -561,14 +561,18 @@
 
     <script src="https://selectize.github.io/selectize.js/js/selectize.js"></script>
     <script src="https://momentjs.com/downloads/moment.js"></script>
+    <script src="~/Content/js/jquery.mask.min.js"></script>
     <script>
 
         $(function () {
             $('select').selectize();
         });
-
+        $('.money').mask('000.000.000.000.000,00', { reverse: true });
+        $('.money2').mask("#.##0,00", { reverse: true });
+        
     </script>
     <script src="~/Content/js/EcommerceCustom.js"></script>
+
     @RenderSection("Scripts", required: false)
 </body>
 
