--- a/ECommerce/ECommerce.WEB/Views/Product/_Product.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Product/_Product.cshtml
@@ -66,7 +66,7 @@
                                                         </div>
                                                         <div class="product-buttons">
                                                             <a href="@Url.Action("Add","UserCart",new {productId=product.ProductId })" class="btn btn-solid">Sepete Ekle</a>
-                                                            <a href="product-page.html" class="btn btn-solid">Ürün detayı</a>
+                                                            <a href="@Url.Action("Detail","Product",new {id=product.ProductId })" class="btn btn-solid">Ürün detayı</a>
                                                         </div>
                                                     </div>
                                                 </div>
